// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Author snapshot author3 1`] = `
<div>
  <section
    className="box-articles"
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row-gap-tablet-3 "
    >
      <article
        className="mod-article --author"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <a
              href="#"
            >
              <picture
                className="mod-picture "
              />
            </a>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --m"
            style={
              Object {
                "display": "block",
                "justifyContent": "center",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "205px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "245px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "225px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "280px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article --author"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <a
              href="#"
            >
              <picture
                className="mod-picture "
              />
            </a>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --m"
            style={
              Object {
                "display": "block",
                "justifyContent": "center",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "205px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "245px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "225px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "280px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article --author"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <a
              href="#"
            >
              <picture
                className="mod-picture "
              />
            </a>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --m"
            style={
              Object {
                "display": "block",
                "justifyContent": "center",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "205px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "245px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "225px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "280px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Color snapshot notaColorRosa3 1`] = `
<div>
  <section
    className="box-articles --highlight --pink"
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row-gap-tablet-3 "
    >
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h1
            className="com-title --xs"
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "200px",
                }
              }
            />
          </h1>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "280px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h1
            className="com-title --xs"
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "200px",
                }
              }
            />
          </h1>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "280px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h1
            className="com-title --xs"
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "200px",
                }
              }
            />
          </h1>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "280px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Color snapshot notaColorVerde3 1`] = `
<div>
  <section
    className="box-articles --highlight --teal"
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row-gap-tablet-3 "
    >
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h1
            className="com-title --xs"
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "200px",
                }
              }
            />
          </h1>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "280px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h1
            className="com-title --xs"
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "200px",
                }
              }
            />
          </h1>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "280px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h1
            className="com-title --xs"
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "200px",
                }
              }
            />
          </h1>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "280px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Editoriales snapshot editoriales2 1`] = `
<div>
  <section
    className="box-articles  --editoriales"
  >
    <div
      className="row"
    >
      <section
        className="mod-footersection"
      >
        <h2
          className="com-title --twoxs skeleton-box"
          style={
            Object {
              "width": "122px",
            }
          }
        >
           
        </h2>
        <div
          className="col-12"
        >
          <article
            className="mod-article"
            style={
              Object {
                "marginLeft": "5px",
              }
            }
          >
            <div
              className="mod-description"
            >
              <h2
                className="com-title --twoxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "205px",
                    }
                  }
                />
              </h2>
            </div>
          </article>
          <article
            className="mod-article"
            style={
              Object {
                "marginLeft": "5px",
              }
            }
          >
            <div
              className="mod-description"
            >
              <h2
                className="com-title --twoxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "205px",
                    }
                  }
                />
              </h2>
            </div>
          </article>
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Focal snapshot focalLeft3 1`] = `
<div>
  <section
    className="box-articles --focal --left"
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row "
    >
      <div
        className="col-tablet-8"
      >
        <article
          className="mod-article"
        >
          <div
            className="content-media"
          >
            <section
              className="mod-media"
            >
              <figure
                className="mod-figure --horizontal"
              >
                <picture
                  className="mod-picture "
                />
              </figure>
            </section>
          </div>
          <section
            className="mod-description"
          >
            <h1
              className="com-title --xl"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "550px",
                  }
                }
              />
            </h1>
            <h2
              className=" com-subhead --twoxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "480px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "248px",
                  }
                }
              />
            </h2>
            <div>
              <strong
                className=" mod-marquee --fourxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "280px",
                    }
                  }
                />
              </strong>
            </div>
          </section>
        </article>
      </div>
      <div
        className="col-tablet-4"
      >
        <article
          className="mod-article"
        >
          <div
            className="content-media"
          >
            <section
              className="mod-media"
            >
              <figure
                className="mod-figure --horizontal"
              >
                <picture
                  className="mod-picture "
                />
              </figure>
            </section>
          </div>
          <section
            className="mod-description"
          >
            <h2
              className="com-title --xs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "278px",
                  }
                }
              />
            </h2>
            <div>
              <strong
                className=" mod-marquee --fourxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "280px",
                    }
                  }
                />
              </strong>
            </div>
          </section>
        </article>
        <article
          className="mod-article"
        >
          <div
            className="content-media"
          >
            <section
              className="mod-media"
            >
              <figure
                className="mod-figure --horizontal"
              >
                <picture
                  className="mod-picture "
                />
              </figure>
            </section>
          </div>
          <section
            className="mod-description"
          >
            <h2
              className="com-title --xs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "278px",
                  }
                }
              />
            </h2>
            <div>
              <strong
                className=" mod-marquee --fourxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "280px",
                    }
                  }
                />
              </strong>
            </div>
          </section>
        </article>
      </div>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Focal snapshot focalRight2 1`] = `
<div>
  <section
    className="box-articles --focal --right"
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row "
    >
      <div
        className="col-tablet-8"
      >
        <article
          className="mod-article"
        >
          <div
            className="content-media"
          >
            <section
              className="mod-media"
            >
              <figure
                className="mod-figure --horizontal"
              >
                <picture
                  className="mod-picture "
                />
              </figure>
            </section>
          </div>
          <section
            className="mod-description"
          >
            <h1
              className="com-title --xl"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "550px",
                  }
                }
              />
            </h1>
            <h2
              className=" com-subhead --twoxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "480px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "345px",
                  }
                }
              />
            </h2>
            <div>
              <strong
                className=" mod-marquee --fourxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "280px",
                    }
                  }
                />
              </strong>
            </div>
          </section>
        </article>
      </div>
      <div
        className="col-tablet-4"
      >
        <article
          className="mod-article"
        >
          <div
            className="content-media"
          >
            <section
              className="mod-media"
            >
              <figure
                className="mod-figure --horizontal"
              >
                <picture
                  className="mod-picture "
                />
              </figure>
            </section>
          </div>
          <section
            className="mod-description"
          >
            <h2
              className="com-title --xl"
              style={
                Object {
                  "flexDirection": "column",
                }
              }
            >
              <SkeletonSpan
                style={
                  Object {
                    "marginBottom": "6px",
                    "width": "278px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "marginBottom": "6px",
                    "width": "268px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "marginBottom": "6px",
                    "width": "125px",
                  }
                }
              />
            </h2>
            <h3
              className="com-subhead --twoxs"
            >
              <React.Fragment>
                <SkeletonSpan
                  style={
                    Object {
                      "width": "278px",
                    }
                  }
                />
                <SkeletonSpan
                  style={
                    Object {
                      "width": "248px",
                    }
                  }
                />
              </React.Fragment>
              <React.Fragment>
                <SkeletonSpan
                  style={
                    Object {
                      "width": "278px",
                    }
                  }
                />
                <SkeletonSpan
                  style={
                    Object {
                      "width": "248px",
                    }
                  }
                />
              </React.Fragment>
              <React.Fragment>
                <SkeletonSpan
                  style={
                    Object {
                      "width": "278px",
                    }
                  }
                />
                <SkeletonSpan
                  style={
                    Object {
                      "width": "248px",
                    }
                  }
                />
              </React.Fragment>
              <React.Fragment>
                <SkeletonSpan
                  style={
                    Object {
                      "width": "278px",
                    }
                  }
                />
                <SkeletonSpan
                  style={
                    Object {
                      "width": "248px",
                    }
                  }
                />
              </React.Fragment>
              <React.Fragment>
                <SkeletonSpan
                  style={
                    Object {
                      "width": "278px",
                    }
                  }
                />
                <SkeletonSpan
                  style={
                    Object {
                      "width": "248px",
                    }
                  }
                />
              </React.Fragment>
            </h3>
            <div>
              <strong
                className=" mod-marquee --fourxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "280px",
                    }
                  }
                />
              </strong>
            </div>
          </section>
        </article>
      </div>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla1 1`] = `
<div>
  <section
    className="box-articles --cinema"
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row"
    >
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --l"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "405px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "445px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla2 1`] = `
<div>
  <section
    className="box-articles "
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row-gap-tablet-2"
    >
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --l"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "445px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "405px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --l"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "445px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "405px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla3 1`] = `
<div>
  <section
    className="box-articles "
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row-gap-tablet-3"
    >
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla6 1`] = `
<div>
  <section
    className="box-articles "
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row-gap-tablet-3"
    >
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla9 1`] = `
<div>
  <section
    className="box-articles "
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row-gap-tablet-3"
    >
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
      <article
        className="mod-article"
      >
        <div
          className="content-media"
        >
          <section
            className="mod-media"
          >
            <figure
              className="mod-figure --horizontal"
            >
              <picture
                className="mod-picture "
              />
            </figure>
          </section>
        </div>
        <section
          className="mod-description"
        >
          <h2
            className="com-title --xs"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <SkeletonSpan
              style={
                Object {
                  "width": "280px",
                }
              }
            />
            <SkeletonSpan
              style={
                Object {
                  "width": "265px",
                }
              }
            />
          </h2>
          <div>
            <strong
              className=" mod-marquee --fourxs"
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "205px",
                  }
                }
              />
            </strong>
          </div>
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Opinion snapshot opinion4 1`] = `
<div>
  <section
    className="box-articles  --opinion"
  >
    <section
      className="mod-headersection "
    >
      <h4
        className="com-title --l --skeleton-box"
        style={
          Object {
            "width": "200px",
          }
        }
      >
         
      </h4>
      <div
        className="com-skeleton"
      />
    </section>
    <div
      className="row"
    >
      <div
        className="col-tablet-5"
      >
        <article
          className="mod-article"
        >
          <div
            className="content-media"
          >
            <section
              className="mod-media"
            >
              <picture
                className="mod-picture"
              />
            </section>
          </div>
          <section
            className="mod-description"
          >
            <h2
              className="com-title --l"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "375px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "355px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "325px",
                  }
                }
              />
            </h2>
            <div>
              <strong
                className=" mod-marquee --fourxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "115px",
                    }
                  }
                />
              </strong>
            </div>
          </section>
        </article>
      </div>
      <div
        className="col-tablet-4"
      >
        <article
          className="mod-article --author"
        >
          <div
            className="content-media"
          >
            <section
              className="mod-media"
            >
              <figure
                className="mod-figure --horizontal"
              >
                <a
                  href="#"
                >
                  <picture
                    className="mod-picture"
                  />
                </a>
              </figure>
            </section>
          </div>
          <section
            className="mod-description"
          >
            <h2
              className="com-title --xs"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "248px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "238px",
                  }
                }
              />
            </h2>
            <div>
              <strong
                className=" mod-marquee --fourxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "115px",
                    }
                  }
                />
              </strong>
            </div>
          </section>
        </article>
        <article
          className="mod-article --author"
        >
          <div
            className="content-media"
          >
            <section
              className="mod-media"
            >
              <figure
                className="mod-figure --horizontal"
              >
                <a
                  href="#"
                >
                  <picture
                    className="mod-picture"
                  />
                </a>
              </figure>
            </section>
          </div>
          <section
            className="mod-description"
          >
            <h2
              className="com-title --xs"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "248px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "238px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "248px",
                  }
                }
              />
            </h2>
            <div>
              <strong
                className=" mod-marquee --fourxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "115px",
                    }
                  }
                />
              </strong>
            </div>
          </section>
        </article>
      </div>
      <div
        className="col-tablet-3"
      >
        <article
          className="mod-article --author"
        >
          <div
            className="content-media"
          >
            <section
              className="mod-media"
            >
              <figure
                className="mod-figure --horizontal"
              >
                <a
                  href="#"
                >
                  <picture
                    className="mod-picture"
                  />
                </a>
              </figure>
            </section>
          </div>
          <section
            className="mod-description"
          >
            <h2
              className="com-title --l"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <SkeletonSpan
                style={
                  Object {
                    "width": "196px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "115px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "170px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "130px",
                  }
                }
              />
              <SkeletonSpan
                style={
                  Object {
                    "width": "176px",
                  }
                }
              />
            </h2>
            <div>
              <strong
                className=" mod-marquee --fourxs"
              >
                <SkeletonSpan
                  style={
                    Object {
                      "width": "115px",
                    }
                  }
                />
              </strong>
            </div>
          </section>
        </article>
      </div>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Unknown snapshot layoutX 1`] = `"Cargando..."`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout and index position when layout is bomba1 should return bomba index 0 1`] = `
<article
  className="mod-article"
>
  <div
    className="content-media"
  >
    <section
      className="mod-media   "
    >
      <figure
        className="mod-figure --horizontal"
      >
        <picture
          className="mod-picture "
        />
      </figure>
    </section>
  </div>
  <section
    className="mod-description"
  >
    <h1
      className="com-title --threexl"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <SkeletonSpan
        style={
          Object {
            "width": "1230px",
          }
        }
      />
      <SkeletonSpan
        style={
          Object {
            "width": "1230px",
          }
        }
      />
      <SkeletonSpan
        style={
          Object {
            "width": "1230px",
          }
        }
      />
    </h1>
  </section>
</article>
`;
